implemented user init
